--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         placeholder: '快速搜索',
         noData: 'No Results!',
       },
-      //repo: 'git地址',
+      repo: 'https://github.com/yinshanhu/docs.git',
       mergeNavbar: true,
       notFoundPage: '404.md',
     }
