--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <script>
     window.$docsify = {
       name: '少磬',
-      logo: '//s1-0gue7rjd647b3e4e-1256910536.tcloudbaseapp.com/img/logo.3b6ca58f.png',
+      logo: './asset/logo.png',
       loadSidebar: true,
       search : {
         paths:'auto',
