--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     window.$docsify = {
       name: '少磬',
       logo: './asset/logo.png',
+      homepage: 'home.md',
       loadSidebar: true,
       search : {
         paths:'auto',
