--- a/index.html
+++ b/index.html
@@ -27,6 +27,6 @@
     }
   </script>
   <script src="./asset/lib/docsify.min.js"></script>
-  <script src="./asset/lib/plugins/search.min.js"></script>
+  <script src="./asset/lib/search.min.js"></script>
 </body>
 </html>
