--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
       repo: 'https://github.com/yinshanhu/docs.git',
       mergeNavbar: true,
       notFoundPage: '404.md',
+      subMaxLevel: 3,
     }
   </script>
   <script src="./asset/lib/docsify.min.js"></script>
