--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
       mergeNavbar: true,
       notFoundPage: '404.md',
       subMaxLevel: 3,
+      routerMode: 'history',
     }
   </script>
   <script src="./asset/lib/docsify.min.js"></script>
