--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" href="./asset/themes/vue.css">
 </head>
 <body>
-  <div id="app"></div>
+  <div id="app">正在登陆空间站。。。</div>
   <script>
     window.$docsify = {
       name: '少磬',
@@ -29,5 +29,6 @@
   </script>
   <script src="./asset/lib/docsify.min.js"></script>
   <script src="./asset/lib/search.min.js"></script>
+  <script src="./asset/lib/zoom-image.min.js"></script>
 </body>
 </html>
