--- a/index.html
+++ b/index.html
@@ -30,5 +30,6 @@
   <script src="./asset/lib/docsify.min.js"></script>
   <script src="./asset/lib/search.min.js"></script>
   <script src="./asset/lib/zoom-image.min.js"></script>
+  <script src="./asset/lib/emoji.min.js"></script>
 </body>
 </html>
