--- a/index.html
+++ b/index.html
@@ -31,5 +31,6 @@
   <script src="./asset/lib/search.min.js"></script>
   <script src="./asset/lib/zoom-image.min.js"></script>
   <script src="./asset/lib/emoji.min.js"></script>
+  <script src="./asset/lib/docsify-copy-code.min.js"></script>
 </body>
 </html>
