--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
       mergeNavbar: true,
       notFoundPage: '404.md',
       subMaxLevel: 3,
+      disqus: 'shortname',
     }
   </script>
   <script src="./asset/lib/docsify.min.js"></script>
@@ -32,5 +33,6 @@
   <script src="./asset/lib/zoom-image.min.js"></script>
   <script src="./asset/lib/emoji.min.js"></script>
   <script src="./asset/lib/docsify-copy-code.min.js"></script>
+  <script src="./asset/lib/disqus.min.js"></script>
 </body>
 </html>
