--- a/index.html
+++ b/index.html
@@ -40,6 +40,8 @@
       clientID: '6c55b4f86c2fd694cec7',
       clientSecret: '93d5a2b2ca00267134bbce9cdb81fbd48ef16980',
       repo: 'git@github.com:yinshanhu/docs.git',
+      owner: 'qing.sq@qq.com',
+      admin: ['qing.sq@qq.com'],
       // facebook-like distraction free mode
       distractionFreeMode: false
     })
