--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 </head>
 <body>
   <div id="app">正在登陆空间站。。。</div>
+  <div id="gitalk-container"></div>
   <script>
     window.$docsify = {
       name: '少磬',
@@ -45,6 +46,7 @@
       // facebook-like distraction free mode
       distractionFreeMode: false
     })
+    gitalk.render('gitalk-container')
   </script>
 </body>
 </html>
