--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
   <meta name="description" content="Description">
   <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
   <link rel="stylesheet" href="./asset/themes/vue.css">
-  <link rel="stylesheet" href="./asset/themes/gitalk.css">
+  <!-- <link rel="stylesheet" href="./asset/themes/gitalk.css"> -->
 </head>
 <body>
   <div id="app">正在登陆空间站。。。</div>
-  <div id="gitalk-container"></div>
+  <!-- <div id="gitalk-container"></div> -->
   <script>
     window.$docsify = {
       name: '少磬',
@@ -35,7 +35,7 @@
   <script src="./asset/lib/zoom-image.min.js"></script>
   <script src="./asset/lib/emoji.min.js"></script>
   <script src="./asset/lib/docsify-copy-code.min.js"></script>
-  <script src="./asset/lib/gitalk.min.js"></script>
+  <!-- <script src="./asset/lib/gitalk.min.js"></script>
   <script>
     const gitalk = new Gitalk({
       clientID: '6c55b4f86c2fd694cec7',
@@ -47,6 +47,6 @@
       distractionFreeMode: false
     })
     gitalk.render('gitalk-container')
-  </script>
+  </script> -->
 </body>
 </html>
